-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
Qt.createComponent(...) automatically sets the parent of the created object to the running QML engine. This prevents the object from being collected, and thus leaks memory. This should be removed once clients have had an opportunity to update their code to set the parent explicitly.
- depends on
-
QTBUG-24840 Make parent object optionally explicit in Qt.createComponent()
-
- Closed
-
- is required for
-
QTBUG-25653 Create a function to trim the QML engine's component cache
-
- Closed
-
| For Gerrit Dashboard: QTBUG-24841 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 26894,1 | Remove default parenting in Qt.createComponent() | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |