Remove default parenting in Qt.createComponent()

Remove the default parent applied to component instances created by
Qt.createComponent().  This allows these objects to be managed by usual
JS reference management, and thus to be appropriately garbage
collected.

Task-number: QTBUG-24841
Change-Id: I29efbb9d8f5a2ef4c74415399fa3024e6590004b
Reviewed-by: Chris Adams <christopher.adams@nokia.com>